--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <button class="btn btn-link">My Instagram</button>
         <button class="btn btn-link">My Portfolio</button>
       </section>
+      <footer>wstypr-devscale-day#04</footer>
     </div>
   </body>
 </html>
